# OFX-GodlyColorLab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ReadMe.md
docs/: BUILDING.md  DAVINCI_RESOLVE_SETUP.md  VEGAS_PRO_SETUP.md
include/: ofx_header_setup.txt
src/: GodlyColorLabPlugin.cpp  GodlyColorLabPlugin.h  PluginMain.cpp  PluginMain.h
